--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1644,9 +1644,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1792,7 +1795,7 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 40%;
+			width: 40vw;
 			/*height: 15%;*/
 			/*line-height: 5.5rem;*/
 			/*border: solid 1px #ffffff;*/
