--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -611,7 +611,35 @@ input, select, textarea {
 
 /* Type */
 
-	html {
+	.logo {
+		max-width: 100%;
+        }
+		
+		@media screen and (max-width: 1680px) {
+
+			.logo {
+				max-width: 75%;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.logo {
+				max-width: 68.75%;
+			}
+
+		}
+
+		@media screen and (max-width: 360px) {
+
+			.logo {
+				max-width: 62.5%;
+			}
+
+		}
+
+        html {
 		font-size: 16pt;
 	}
 
