--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1823,7 +1823,7 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 100%;
+			width: 40vw;
 			/*height: 15%;*/
 			/*line-height: 5.5rem;*/
 			/*border: solid 1px #ffffff;*/
