--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -805,7 +805,7 @@ input, select, textarea {
 	}
 
 	.logo {
-		width: 40vw;
+		width: 100%;
         }
 		
 		@media screen and (max-width: 1680px) {
@@ -1823,7 +1823,7 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 40vw;
+			width: 100%;
 			/*height: 15%;*/
 			/*line-height: 5.5rem;*/
 			/*border: solid 1px #ffffff;*/
