--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1823,7 +1823,7 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 50%;
+			width: 750px;
 			/*height: 15%;*/
 			/*line-height: 5.5rem;*/
 			/*border: solid 1px #ffffff;*/
@@ -1831,6 +1831,14 @@ input, select, textarea {
 			/*padding: 1.5%;*/
 			
 		}
+		
+		@media only screen and (max-width: 800px){
+			#header .logo {
+				 width: 300px
+				}
+			}
+		
+		
 
 		/*	#header .logo .icon:before {
 				font-size: 2rem;
