--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1997,7 +1997,7 @@ input, select, textarea {
 				width: 500px;
 			}
 			
-			.contact_info {
+			.contact_info_child {
 				scale: 0.8;
 			}
 
@@ -2036,7 +2036,7 @@ input, select, textarea {
 				width: 400px;
 			}
 			
-			.contact_info {
+			.contact_info_child {
 				scale: 0.7;
 			}
 
@@ -2085,7 +2085,7 @@ input, select, textarea {
 				width: 250px;
 			}
 			
-			.contact_info {
+			.contact_info_child {
 				scale: 0.5;	
 			}
 
