--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3373,5 +3373,5 @@ $contentFadeinAT: 0.5s;
   height: 100%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  margin: 2% 1% 1% 1%;
+  margin: 2%;
 }
