--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3375,3 +3375,135 @@ $contentFadeinAT: 0.5s;
   overflow: hidden;
   margin: 2% 1% 1% 1%;
 }
+
+/* Contact info */
+
+.row{
+	margin: 0 auto;
+	padding-bottom: 30%;
+	width: 100%;
+	min-height: 90vh;
+	max-height: 90vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	}
+	
+.accodian-wrap{
+	width: 100%;
+	}
+	
+.accodian-items{
+	margin-bottom: 20px;
+	/*background: -webkit-gradient(linear,left top, right top,from(#43018f),to(#c00bda));
+	background: -o-linear-gradient(left,#43018f,#c00bda);
+	background: linear-gradient(90deg,#43018f,#c00bda);*/
+	/*background: #1b2124;*/
+	position: relative;
+	font-weight: 700;
+	/*border-radius: 5px;*/
+	text-align: center;
+	border-bottom: 1px solid #fff;
+	}
+	
+.contact_item {
+	display: inline-block;
+	padding: 0 10% 0 10%;
+}
+
+.discription {
+	display: flex;
+	justify-content: center;
+}
+	
+.accodian-items .discription{
+	padding: 2% 2% 0 2%;
+	padding-top: ;
+	display: none;
+	font-size: 18px;
+	line-height: 1.5;
+	color: #fff;
+	/*border-radius: 0 0 5px 5px;*/
+	/*background: -webkit-gradient(linear,left top, right top,from(#43018f),to(#c00bda));
+	background: -o-linear-gradient(left,#43018f,#c00bda);
+	background: linear-gradient(90deg,#43018f,#c00bda);*/
+	/*background: #1b2124;*/
+	}
+	
+.accodian-items .title{
+	padding: 22px 16px;
+	padding-right: 50px;
+	color: #fff;
+	font-size: 20px;
+	border-radius: 5px;
+	cursor: pointer;
+	-webkit-transition: 0.4s ease;
+	-o-transition: 0.4s ease;
+	transition: 0.4s ease;
+	position: relative;
+	font-weight: 700;
+	}
+	
+.accodian-items .title:after{
+	content: '';
+	border: 4px solid #fff;
+	border-top: 0px solid transparent;
+	border-right: 0px solid transparent;
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	position: absolute;
+	right: 20px;
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	top: 50%;
+	margin-top: -10px;
+	}
+	
+.accodian-items.active > .title{
+	border-radius: 5px 5px 0 0;
+	} 
+	
+.accodian-items.active > .title:after{
+	border: 4px solid #fff;
+	border-left: 0px solid transparent;
+	border-bottom: 0px solid transparent;
+	margin-top: -3px;
+	}
+
+/*For Nested*/
+
+.accodian-items .accodian-items {
+	margin: 20px 0 0 0;
+	display: block;
+	}
+	
+.accodian-items .accodian-items .title{
+	padding: 13px 20px;
+	font-size: 18px;
+	}
+	
+.accodian-items .accodian-items{
+	border: 3px solid;
+	-o-border-image: -o-linear-gradient(45deg,#d0d0d0,#fff) 1;
+	border-image: linear-gradient(45deg,#d0d0d0,#fff) 1;
+	border-image-slice: 1;
+	}
+	
+.accodian-items .accodian-items .discription{
+	font-size: 16px;
+	}
+	
+.accodian-items .accodian-items .title:after{
+	border-width: 3px; 
+	border-top: 0;
+	border-right: 0;
+	}
+	
+.accodian-items .accodian-items.active > .title:after{
+	border: 3px solid #fff;
+	border-left: 0px solid transparent;
+	border-bottom: 0px solid transparent;
+	margin-top: -3px;
+	}
