--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3503,3 +3503,53 @@ $contentFadeinAT: 0.5s;
 	border-bottom: 0px solid transparent;
 	margin-top: -3px;
 	}
+
+.accodian items .title-main {
+	font-size: 30px
+}
+
+@media screen and (max-width: 1440px) {
+	.accodian-items .title-main {
+		font-size: 20px;
+	}
+		
+	.accodian-items {
+		margin: 1%;
+	}
+	
+	.accodian-items .title {
+		font-size: 15px;
+	}
+	
+	.discription {
+		font-size: 12px;
+	}
+}
+
+@media screen and (max-width: 736px) {
+	.accodian-items {
+		padding: 2%;
+	}
+	
+	.accodian-items .title {
+		font-size: 11px;
+	}
+	
+	.discription {
+		font-size: 10px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.accodian-items {
+		padding: 3%;
+	}
+
+	.accodian-items .title {
+		font-size: 11px;
+	}
+	
+	.discription {
+		font-size: 10px;
+	}
+}
